[Change] Update logind role and associated molecule tests

--- a/roles/logind/molecule/default/verify.yml
+++ b/roles/logind/molecule/default/verify.yml
@@ -3,10 +3,14 @@
   hosts: all
   tasks:
     - name: Ensure service facts are gathered
+      tags:
+        - logind
       ansible.builtin.service_facts:
       register: _service_facts
 
     - name: Ensure service is present in service facts
+      tags:
+        - logind
       ansible.builtin.assert:
         that:
           - services['systemd-logind.service'] is defined
