--- a/roles/logind/handlers/main.yml
+++ b/roles/logind/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Restart systemd-logind
   tags:
-    - systemd_logind
+    - logind
   become: true
   ansible.builtin.systemd_service:
     name: systemd-logind
