--- a/roles/logind/meta/main.yml
+++ b/roles/logind/meta/main.yml
@@ -1,11 +1,12 @@
 ---
 dependencies: []
 galaxy_info:
-  role_name: systemd_logind
+  role_name: logind
   author: Taylor Kimball
   description: Login manager
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: Debian
       versions:
