[Change] Update speedtest role and associated molecule tests

--- a/roles/speedtest/molecule/default/converge.yml
+++ b/roles/speedtest/molecule/default/converge.yml
@@ -2,5 +2,8 @@
 - name: Converge
   hosts: all
   roles:
-    - role: linuxhq.linux.speedtest
+    - role: speedtest
+      speedtest_packages: []
+
+    - speedtest
 ...
