--- a/roles/speedtest/defaults/main.yml
+++ b/roles/speedtest/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 speedtest_packages:
   - speedtest
-speedtest_releasever: "{{ ansible_distribution_major_version }}"
-speedtest_repository_cli: true
-speedtest_repository_cli_source: false
+speedtest_repositories:
+  - name: ookla_speedtest-cli
+    state: enabled
 ...
