--- a/roles/speedtest/meta/main.yml
+++ b/roles/speedtest/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Official Ookla Speedtest CLI
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
