--- a/roles/group/tasks/main.yml
+++ b/roles/group/tasks/main.yml
@@ -1,32 +1,19 @@
 ---
-- name: Ensure groups are present
+- name: Ensure groups are managed
   tags:
     - group
   become: true
   ansible.builtin.group:
-    gid: "{{ _group.gid | default(omit) }}"
-    local: "{{ _group.local | default(false) }}"
+    force: "{{ _group.force | d(false) }}"
+    gid: "{{ _group.gid | d(omit) }}"
+    local: "{{ _group.local | d(false) }}"
     name: "{{ _group.name }}"
-    non_unique: "{{ _group.non_unique | default(false) }}"
-    state: present
-    system: "{{ _group.system | default(false) }}"
-  loop: "{{ groupadd }}"
+    non_unique: "{{ _group.non_unique | d(false) }}"
+    state: "{{ _group.state | d('present') }}"
+    system: "{{ _group.system | d(false) }}"
+  loop: "{{ group_list }}"
   loop_control:
-    label: "{{ _group.name | default(none) }}"
-    loop_var: _group
-  when:
-    - _group.name is defined
-
-- name: Ensure groups are absent
-  tags:
-    - group
-  become: true
-  ansible.builtin.group:
-    name: "{{ _group.name }}"
-    state: absent
-  loop: "{{ groupdel }}"
-  loop_control:
-    label: "{{ _group.name | default(none) }}"
+    label: "{{ _group.name | d(none) }}"
     loop_var: _group
   when:
     - _group.name is defined
