[Change] Update setup role and associate molecule tests

--- a/roles/setup/defaults/main.yml
+++ b/roles/setup/defaults/main.yml
@@ -1,12 +1,8 @@
 ---
-setup_aliases:
-  - key: mailer-daemon
-    value: postmaster
-  - key: postmaster
-    value: root
+setup_aliases: []
 setup_environment: []
 setup_hosts: []
-setup_hostname: "{{ inventory_hostname }}"
+setup_hostname: null
 setup_motd: null
 setup_profile_d: []
 ...
