--- a/roles/setup/meta/main.yml
+++ b/roles/setup/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Configure setup package contents
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
