--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -7,7 +7,7 @@
     name: setup
     state: present
 
-- name: Ensure setup aliases configuration is present
+- name: Ensure setup aliases configuration is managed
   tags:
     - setup
   become: true
@@ -20,7 +20,7 @@
   when:
     - setup_aliases | length > 0
 
-- name: Ensure setup environment configuration is present
+- name: Ensure setup environment configuration is managed
   tags:
     - setup
   become: true
@@ -33,7 +33,7 @@
   when:
     - setup_environment | length > 0
 
-- name: Ensure setup hostname configuration is present
+- name: Ensure setup hostname configuration is managed
   tags:
     - setup
   become: true
@@ -44,9 +44,9 @@
     owner: root
     src: hostname.j2
   when:
-    - setup_hostname | length > 0
+    - setup_hostname is not none
 
-- name: Ensure setup hosts configuration is present
+- name: Ensure setup hosts configuration is managed
   tags:
     - setup
   become: true
@@ -59,7 +59,7 @@
   when:
     - setup_hosts | length > 0
 
-- name: Ensure setup motd configuration is present
+- name: Ensure setup motd configuration is managed
   tags:
     - setup
   become: true
@@ -72,7 +72,7 @@
   when:
     - setup_motd is not none
 
-- name: Ensure setup profile.d configurations are present
+- name: Ensure setup profile.d configurations are managed
   tags:
     - setup
   become: true
@@ -84,7 +84,7 @@
     src: profile_d.j2
   loop: "{{ setup_profile_d }}"
   loop_control:
-    label: "{{ _profile.name | default(none) }}"
+    label: "{{ _profile.name | d(none) }}"
     loop_var: _profile
   when:
     - _profile.name is defined
