--- a/roles/pam_ssh_agent_auth/molecule/default/converge.yml
+++ b/roles/pam_ssh_agent_auth/molecule/default/converge.yml
@@ -2,5 +2,8 @@
 - name: Converge
   hosts: all
   roles:
-    - linuxhq.linux.pam_ssh_agent_auth
+    - role: pam_ssh_agent_auth
+      pam_ssh_agent_auth_keys: []
+
+    - pam_ssh_agent_auth
 ...
